# S7-cpp-for-Snap7

./: .gitignore  CMakeLists.txt  README.md  s7.cpp  s7.h
snap7-full-1.4.2/src/core/: s7_isotcp.cpp
